# local_agentic_rag

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  frontend.py  pyproject.toml  requirements.txt
scripts/: evaluate_pipeline.py  export_models.py
src/: nodes.py  run_agent.py  state.py
