[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "chromadb==1.5.8",
    "fastapi==0.136.0",
    "httpx==0.28.1",
    "langchain-community==0.4.1",
    "langchain-core==1.3.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai==1.1.16",
    "langgraph==1.1.9",
    "pydantic==2.13.3",
    "pytest==9.0.3",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.56.0",
    "uvicorn==0.45.0",
]
